# vorn-mat

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
data/: vorn-mat-cross-family-stats-2026-05-15.json
docs/: RUNBOOK.md
examples/: analyze_vanilla_observation_neighborhood.py  build_4k_budget_sweep_artifact.py  build_8k_budget_sweep_artifact.py  build_8k_sentence_context_artifact.py  build_adaptive_granularity_posthoc_artifact.py  build_adaptive_vorn_8k_artifact.py  build_cross_family_extension_wave_artifact.py  build_cross_family_no_guards_mirror_artifacts.py  build_cross_family_sentence_vorn_noguards_wave_artifact.py  build_cross_model_gate_artifact.py  build_gemma2_9b_4k_fast_read_artifact.py  build_gemma4_sentence_attention_budget_fill_and_noguards_artifact.py  build_gemma_4k_cross_baseline_extension_artifact.py  build_gemma_4k_degradation_curve_artifact.py  build_gemma_4k_gate_artifact.py  build_llama31_4k_cross_baseline_extension_artifact.py  build_llama31_4k_gate_artifact.py  build_llama31_4k_threshold_256_artifact.py  build_matrix_backfill_artifact.py  build_ministral_4k_fast_read_artifact.py  build_qa2_multifamily_cross_task_artifact.py  build_qwen3_4k_gate_artifact.py  build_qwen_4k_budget_sweep_artifact.py  build_qwen_4k_word_budget_sweep_artifact.py  build_score_distribution_observation_8k_artifact.py  build_sentence_attention_2x2_artifact.py  build_sentence_attention_2x2_gemma2_9b_artifact.py  build_sentence_attention_2x2_gemma4_artifact.py  build_sentence_attention_2x2_llama31_artifact.py  build_sentence_attention_2x2_ministral8b_artifact.py  build_sentence_trigger_ablation_artifact.py  build_token_vorn_qa2_cross_task_artifact.py  collect_modal_wave.py  niah_eviction_antagonists.jsonl  niah_smoke.jsonl  reemit_paired_artifacts.py  run_local_step1.py  run_local_vanilla.py  (+8 more)
(+192 files in other folders)
