[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "vorn-mat-prototype"
version = "0.0.1"
description = "Prototype scaffold for vorn-aligned memory-augmented transformer baseline reproduction"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]
local = [
    "torch",
    "transformers>=4.44.0",
    "accelerate",
    "sentencepiece",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
