[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "vorn-mat-prototype"
version = "0.0.1"
description = "Prototype scaffold for vorn-aligned memory-augmented transformer baseline reproduction"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "numpy>=1.26", "matplotlib>=3.7"]
# Pinned to the best-guess canonical version window (Atlas archaeology
# 2026-05-23). These pins are a reconstruction from raw-report timestamps and
# PyPI release chronology, not a recovered lockfile. See README.md
# "Reproducibility disclosure" for the full provenance read and the two
# documented caveats (earliest May 13/14 seed runs likely used
# huggingface_hub==1.14.0; some late May 20 budget-fill rows may have crossed
# transformers==5.9.0 on a fresh Modal image rebuild).
local = [
    "torch==2.12.0",
    "transformers==5.8.1",
    "accelerate==1.13.0",
    "datasets==4.8.5",
    "sentencepiece==0.2.1",
    "faiss-cpu==1.13.2",
    "huggingface_hub==1.15.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
